--- a/08CiCdWithGitHubActionsAndAzureExercise/02LibraryCatalog/package.json
+++ b/08CiCdWithGitHubActionsAndAzureExercise/02LibraryCatalog/package.json
@@ -4,8 +4,9 @@
     "description": "Online Book Library Single Page Application",
     "main": "index.html",
     "scripts": {
-        "test": "mocha tests",
-        "start": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1"
+        "test": "npx playwright test",
+        "start-fe": "http-server -a localhost -p 3000 -P http://localhost:3000? -c-1",
+        "start-be": "node server/server.js"
     },
     "author": "",
     "license": "ISC",
@@ -14,10 +15,8 @@
         "page": "^1.11.6"
     },
     "devDependencies": {
-        "@playwright/test": "^1.39.0",
-        "chai": "4.3.4",
+        "@playwright/test": "^1.40.0",
         "http-server": "0.12.3",
-        "mocha": "8.3.2",
         "playwright-chromium": "1.9.2"
     }
 }
