--- a/17Exam/pipeline.yml
+++ b/17Exam/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
       - name: Run unit test for the application
         run: npm run test:unit
-      - name: Display Softuni Username
+      - name: Display Softuni Username - miroslav.gechev
         run: echo 'miroslav.gechev'
 
   deploy:
